--- a/styles.css
+++ b/styles.css
@@ -16,14 +16,14 @@ body {
 section {
   max-width: 1200px;
   margin: 20px auto;
-  background-color: #1e5cd9;
+  background-color: #eee;
   padding: 50px;
   border-radius: 5%;
   text-align: center;
   align-items: center;
 }
 h1 {
-  color: #fff;
+  color: purple;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 20px;
